--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 
 <body>
-        <h1>Eu sou a Estéfany, sou professora de física em Nova prata do Iguaçu e Boa esperança do iguaçu</h1>
-        <p>Sou mãe do Bernardo e tenho uma cachorrinha chamada Meg
-        <p>Sou cursista do formadores e aqui estao meus projetos desenvolvidos no GE
+        <h1>Eu sou a Gislaine Ramos De Souza, sou estudante e sou de Boa esperança do iguaçu</h1>
+        <p>Sou filha da Maria de Lurdes e irmã da Jéssica,Gisla Maria,Gisla
+        <p>Eu tenho três animais em casa 
         <h1> minhas habilidades </h1>
         <span> HTML</span>
         <span> CSS</span>
@@ -35,7 +35,7 @@
     </main>
     <footer>
         <h2> entre em contato </h2>
-        <a href="https://github.com/estefanypotmaier-droid/">  GitHub </a>
+        <a href="gislaine.ramos.souza@escola.pr.gov.br">  GitHub </a>
         <p> Produzida pela Profª Estefany </p>
 
 
