--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <footer>
         <h2> entre em contato </h2>
         <a href="gislaine.ramos.souza@escola.pr.gov.br">  GitHub </a>
-        <p> Produzida pela Profª Estefany </p>
+        <p> Produzida por Gislaine </p>
 
 
     </footer>
