--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio </title>
 </head>
-
-
 <body>
+    <header>
+    <img src="imagem/download.jpeg" alt="avatar da Gislaine " width="200">
         <h1>Eu sou a Gislaine Ramos De Souza, sou estudante e sou de Boa esperança do iguaçu</h1>
         <p>Sou filha da Maria de Lurdes e irmã da Jéssica,Gisla Maria,Gisla
         <p>Eu tenho três animais em casa 
